--- a/(Desafio_Aula_4_Criar_um_chatbot)_Bárbara_Domingues.ipynb
+++ b/(Desafio_Aula_4_Criar_um_chatbot)_Bárbara_Domingues.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7Butyem+SbDjl3CuWJEHG",
+      "authorship_tag": "ABX9TyN694cc7YSEJSw3Kvtgr20t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,14 +41,16 @@
       "cell_type": "code",
       "source": [
         "import google.generativeai as genai\n",
+        "from google.colab import userdata\n",
+        "GOOGLE_API_KEY = userdata.get('SECRET_KEY')\n",
         "\n",
-        "GOOGLE_API_KEY=\"AIzaSyB7QcGF_unJZf1BLEDJ6vorC0VS24CsRB8\"\n",
+        "GOOGLE_API_KEY=\"GOOGLE_API_KEY\"\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
       "metadata": {
         "id": "dMxkeTK4RQr4"
       },
-      "execution_count": 14,
+      "execution_count": 42,
       "outputs": []
     },
     {
